samples/_failures_safe/1761209595_a99c67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35eb9cfb.c: In function ‘main’:
./samples/SAFE/__tmp_35eb9cfb.c:159:5: error: expected declaration or statement at end of input
  159 |     printf("Enter start and target nodes: ");
      |     ^~~~~~
